--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "modern-css-reset": "^1.4.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
